# eunice

./: .gitignore  ANIMATED_THINKING_UPDATE.md  BROWSER.md  CLAUDE.md  COMPRESS_CONTEXT.md  Cargo.toml  DIFF.md  Dockerfile  GEMMA4-32B-LLAMA.CPP.md  GEMMA4.md  HOWTO_SCHEDULED_AGENTS.md  INTERACTION_SPEC.md  KEYROTATION.md  MULTIAGENT_DESIGN_1.md  Makefile  NEWTIPS.md  README.md  UI_ENHANCEMENTS.md  V1_SPEC.md  WEBAPP.md  build-and-test-docker.sh  build.rs  compaction_prompt.md  config.example.json  config.toml  create_demo.sh  dmn_instructions.md  eunice-completion.bash  eunice.py  install.sh  llms-full.txt  llms.txt  note_to_proxy.txt  pyproject.toml  research_agent.toml  sysadmin_config.example.json  sysadmin_instructions.md  sysadmin_instructions.yml  test-container-eunice.sh  test-docker.sh  (+5 more)
assets/: create_demo.sh
docs/superpowers/plans/: 2026-06-26-gemmad-default.md  2026-07-22-eunice-webapp-ui-v2.md  2026-07-22-eunice-xeb-ai-deploy.md  2026-07-22-gemmad-compaction-fix.md
docs/superpowers/specs/: 2026-06-26-gemmad-default-design.md  2026-07-20-long-running-agents-design.md  2026-07-21-agent-editor-routing-design.md  2026-07-21-cron-preview-and-agent-index-design.md  2026-07-22-eunice-webapp-ui-v2-design.md  2026-07-22-eunice-xeb-ai-hosted-webapp-design.md
examples/: README.md
examples/agent_tool_access/: README.md  eunice.toml
examples/alignment_engine/: instructions.md  run.sh
examples/brave_mcp/: README.md  eunice.toml
examples/codebase_archaeologist/: instructions.md  run.sh
examples/codebase_archaeologist/workspace/: component_map.md  component_map_1.md  exploration_log.md  next_exploration.md  overview.md  target.txt
examples/codebase_archaeologist/workspace/components/: core.md  display.md  dmn_agent.md  mcp.md  src_core.md
examples/codebase_archaeologist/ws-self/: exploration_log.md  next_exploration.md  overview.md  target.txt
examples/codebase_archaeologist/ws-self/components/: provider_client.md
examples/compaction_test/: README.md  test_compaction.sh
examples/docker-isolated/: Makefile
examples/docker-isolated/workspace/: am_i_in_a_container.sh
examples/fastmcp_server/: eunice.toml  sample_mcp_server.py
examples/image_understanding/: README.md  instructions.md  run.sh
examples/just_shell_inspection/: README.md  eunice.toml  instruction.md  run.sh
examples/multi_agent/: README.md  agent_editor.txt  agent_publisher.txt  agent_writer.txt  eunice_minimal.json  prompt.txt  run.sh
examples/pdf_understanding/: instructions.md  run.sh
examples/real_multi_agent/: README.md  eunice.toml  kitchen_log.txt  orders.txt  pantry.txt  test_interact_multiagent.sh
examples/real_multi_agent/agents/: counter.md  head_chef.md  line_cook.md  supplier.md
examples/remote_mcp/: README.md  eunice.toml
examples/research_agent/: README.md  eunice.toml  run.sh
examples/research_agent/agents/: evaluator.md  lead.md  report_writer.md  researcher.md
examples/shell/: README.md  config.json  sample_script.sh  test.sh
examples/silly_multi_agent/: README.md  start.sh
examples/silly_multi_agent/analyzer_agent/: instructions.md
examples/silly_multi_agent/analyzer_agent/workspace/: analyzed_projects.md
examples/silly_multi_agent/researcher_agent/: eunice.toml  instructions.md
examples/silly_multi_agent/researcher_agent/workspace/: projects_to_analyze.md  research_log.md
examples/silly_multi_agent/root_agent/: eunice.toml  instructions.md
examples/silly_multi_agent/root_agent/workspace/: final_summary.md  orchestration_log.md
examples/simple_time/: README.md  config.json  run.sh  run_default_config.sh  run_explicit_config.sh
examples/tool_filtering/: README.md  eunice.toml  notes.txt
examples/toy_agent_ideas/: instructions.md  run.sh
examples/toy_agent_ideas/workspace/: agent_catalog.md  tool_combinations.md
examples/toy_agent_ideas/workspace/EcosystemMapper/: design_1_periodic_crawler.md  design_2_recursive_explorer.md  design_3_hybrid_curator.md  final.md
examples/toy_agent_ideas/workspace/EpistemicRadar/: design_1_gardener.md  design_2_hunter_gatherer.md  design_3_council.md  final.md
examples/toy_agent_ideas/workspace/LegacyArcheologist/: design_1_conservative.md  design_2_experimental.md  design_3_hybrid.md  final.md
examples/toy_agent_ideas/workspace/ReciprocityEngine/: design_1_accountant.md  design_2_daemon.md  design_3_gardener.md  final.md
examples/toy_agent_ideas/workspace/RefactoringSteward/: design_1_conservative.md  design_2_experimental.md  design_3_hybrid.md  final.md
examples/toy_agent_ideas/workspace/SocioTechnicalArchitect/: design_1_conservative.md  design_2_experimental.md  design_3_hybrid.md  final.md
examples/toy_agent_ideas/workspace/TheDigitalStratigrapher/: design_1_schema_historian.md  final.md  (+2 more)
examples/websearch/: README.md  instructions.md  run.sh
examples/website_researcher/: eunice.toml
prompts/: dmn_instructions.md
scripts/: reinstall.sh
site/: index.html  install.sh
skills/git_helper/: SKILL.md
skills/image_analysis/: SKILL.md  analyze.py
skills/pdf_analysis/: SKILL.md  analyze.py
skills/web_search/: SKILL.md  search.py
src/: agent.rs  agents.rs  api_keys.rs  browser_main.rs  builtin_tools.rs  client.rs  compact.rs  compress.rs  config.rs  create_agent.rs  daemon.rs  display.rs  display_sink.rs  gemmad.rs  interactive.rs  key_rotation.rs  lib.rs  local.rs  main.rs  mcpz_main.rs  models.rs  output_store.rs  provider.rs  skills.rs  theme.rs  usage.rs
src/browser/: db.rs  mod.rs  output.rs
src/mcp/: http_server.rs  manager.rs  mod.rs  server.rs
src/mcpz/: cli.rs  mod.rs
src/mcpz/http/: handlers.rs  server.rs  session.rs  tls.rs
src/mcpz/servers/: browser.rs  common.rs  mod.rs  shell.rs
src/orchestrator/: mod.rs  orchestrator.rs
src/tools/: bash.rs  mod.rs  read.rs  skill.rs  write.rs
src/tui/: app.rs  frame_editor.rs  mod.rs
src/webapp/: handlers.rs  mod.rs  persistence.rs  scheduler.rs  server.rs
tests/: all_models.sh  container-eunice.sh  container.sh  custom-config.json  events.sh  host.sh  test_filesystem.sh  tools.sh
webapp/: index.html
(+364 files in other folders)
