[package]
name = "eunice"
version = "0.2.71"
edition = "2021"
description = "Agentic CLI runner with OpenAI, Gemini, Claude, and Ollama support"
license = "MIT"
authors = ["Mark Kockerbeck <xeb@hey.com>"]
repository = "https://github.com/xeb/eunice"
homepage = "https://longrunningagents.com"
readme = "README.md"
keywords = ["ai", "cli", "llm", "gemini", "openai"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["examples/**/*.pdf", "examples/**/*.jpg", "examples/**/*.png", "assets/"]

[[bin]]
name = "eunice"
path = "src/main.rs"

[[bin]]
name = "mcpz"
path = "src/mcpz_main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal UI
crossterm = "0.28"
colored = "2"
indicatif = "0.17"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = "0.4"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }
base64 = "0.22.1"

# Web server (for --webapp mode)
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Full TUI framework
r3bl_tui = "0.7"
atty = "0.2"

# Session persistence (SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"

# mcpz dependencies
dirs = "5"
urlencoding = "2"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono"] }
sha2 = "0.10"
hex = "0.4"
time = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
