[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eunice"
version = "1.0.0"
description = "Agentic CLI runner with OpenAI, Gemini, and Ollama support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mark Kockerbeck", email = "xeb@hey.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]
dependencies = [
    "openai",
]

[project.scripts]
eunice = "eunice:main"

[project.urls]
Homepage = "https://github.com/xeb/eunice"
Repository = "https://github.com/xeb/eunice"
Issues = "https://github.com/xeb/eunice/issues"
